# TinyRuntime

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Findpybind11.cmake
include/: inference_session.h  session_option.h
src/: inference_session.cc
test/: test_session.cc
